Fix: arrumando o hover nos links

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <p>Email: regiscopedro07@gmail.com</p>
             <p>Telefone: (+55) 48 99623-1797</p>
             <p>Localização: Criciúma, Santa Catarina</p>
-            <p>bairro Nova Esperança, Rua pantanal, n° 71.</p>
+            <p>Bairro Nova Esperança, Rua pantanal, n° 71</p>
           </div>
 
           <div class="col-links">
