Fix: Ajustando link da navbar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
 
-    <main class="main-container">
+    <main class="main-container" id="inicio">
       <div class="apresentation-container">
         <div class="title-apresentation">
           <h1>
