Feat: Deixando o site responsivo.

--- a/index.html
+++ b/index.html
@@ -235,13 +235,20 @@
             <ol>
               Status: Concluído
             </ol>
+            <ol>
+              Projeto(s):
+              <a
+                href="https://ateft.com.br/site/home"
+                class="link-project"
+                target="_blank"
+                >ATEFT</a
+              >
+            </ol>
             <h5>Descrição</h5>
             <div class="description-experiences">
               <p>Desenvolvimento backend com PHP e MySQL.</p>
             </div>
           </li>
-
-        
         </ul>
       </div>
     </section>
@@ -253,17 +260,22 @@
             <h3>Fale comigo</h3>
             <p>Email: regis.copedro@gmail.com</p>
             <p>Telefone: (+55) 48 99623-1797</p>
-            <p>Localização: Criciúma, Santa Catarina</p>
-            <p>Bairro Nova Esperança, Rua pantanal, n° 71</p>
+            <p>Localização: Criciúma, Santa Catarina.</p>
+            <p>Bairro Nova Esperança, Rua pantanal, n° 71.</p>
           </div>
           <div class="col-links">
             <h3>Links rápidos</h3>
             <ul>
-              <li><a href="#home">Home</a><span class="line"></span></li>
-              <li><a href="#sobre">Sobre</a><span class="line"></span></li>
-              <li><a href="#estudos">Estudos</a><span class="line"></span></li>
+              <li><a href="#inicio">Início</a><span class="line"></span></li>
               <li>
-                <a href="#contatos">Contatos</a><span class="line"></span>
+                <a href="#projetos">Projetos</a><span class="line"></span>
+              </li>
+              <li>
+                <a href="#contatos">contatos</a><span class="line"></span>
+              </li>
+              <li>
+                <a href="#experiencias">Experiências</a
+                ><span class="line"></span>
               </li>
             </ul>
           </div>
