--- a/index.html
+++ b/index.html
@@ -256,13 +256,6 @@
     <footer>
       <div class="container-contatos" id="contatos">
         <div class="lista-informacoes">
-          <div class="col-infos">
-            <h3>Fale comigo</h3>
-            <p>Email: regis.copedro@gmail.com</p>
-            <p>Telefone: (+55) 48 99623-1797</p>
-            <p>Localização: Criciúma, Santa Catarina.</p>
-            <p>Bairro Nova Esperança, Rua pantanal, n° 71.</p>
-          </div>
           <div class="col-links">
             <h3>Links rápidos</h3>
             <ul>
@@ -279,8 +272,16 @@
               </li>
             </ul>
           </div>
+          <div class="col-infos">
+            <h3>Fale comigo</h3>
+            <p>Email: regis.copedro@gmail.com</p>
+            <p>Telefone: (+55) 48 99623-1797</p>
+            <p>Localização: Criciúma, Santa Catarina.</p>
+          
+          </div>
+            
           <div class="social-icons">
-            <h3>Conecte-se comigo</h3>
+            <h3>Conecte-se</h3>
             <ul class="wrapper">
               <li>
                 <a
