Test: Testando botão provisório de currículo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header class="header-mobile">
+      <nav class="nav-mobile">
+        <p><a
+          class="nav-mobile-link"
+          href="assets/dnwld/Regis Costa Pedro-Curriculo.pdf"
+          target="_blank"
+          >Currículo<span></span
+        ></a></p>
+      </nav>
+
+    </header>
     <header>
+   
+     
       <nav class="nav-bar">
         <ul class="nav-bar-list">
           <li class="nav-item">
@@ -141,7 +154,7 @@
             <h4>Banco Flux</h4>
             <p>
               Aplicativo de celular, voltado para o gerenciamento de diferentes
-              contas bancárias através do Pix.
+              contas bancárias através método Pix.
             </p>
 
             <span
