--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
           <div class="col-infos">
             <h3>Fale comigo</h3>
             <p>Email: regis.copedro@gmail.com</p>
-            <p> Telefone: <a style="color: #e9f0fe;" href="https://web.whatsapp.com/send?phone=+5548996231797" >(+55) 48 99623-1797</a></a></p>
+            <p> Telefone: <a style="color: #e9f0fe;" href="https://wa.me/5548996231797" >(+55) 48 99623-1797</a></a></p>
             <p>Localização: Criciúma, Santa Catarina.</p>
           </div>
 
