Fix: Ajustando curriculo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class="nav-item btn-curriculo">
             <a
               class="nav-link"
-              href="assets/dnwld/Regis Costa Pedro-Curriculo.pdf"
+              href="assets/dnwld/Regis_Costa_Pedro-Curriculo.pdf"
               target="_blank"
               >Currículo<span><ion-icon name="download"></ion-icon></span
             ></a>
@@ -68,7 +68,7 @@
             <li class="nav-item btn-curriculo">
               <a
                 class="nav-link"
-                href="assets/dnwld/Regis Costa Pedro-Curriculo.pdf"
+                href="assets/dnwld/Regis_Costa_Pedro-Curriculo.pdf"
                 target="_blank"
                 >Currículo<span><ion-icon name="download"></ion-icon></span
               ></a>
