Ref: Ajustando link de projeto.

--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
             <h4>Banco Flux</h4>
             <p>
               Aplicativo de celular, voltado para o gerenciamento de diferentes
-              contas bancárias através método Pix.
+              contas bancárias através método Pix. Neste projeto, fiquei responsável por criar a API do aplicativo.
             </p>
 
             <span
-              ><a href="https://github.com/RegisCostaPedro/" target="_blank">
+              ><a href="https://github.com/RegisCostaPedro/flux-back-end" target="_blank">
                 Ver projeto
               </a></span
             >
