--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 ></a>
               </li>
               <li>
-                <a href="https://www.instagram.com/regiss.w/" target="_blank"
+                <a href="https://www.instagram.com/regis.copedro/" target="_blank"
                   ><i class="fa-brands fa-instagram"></i
                 ></a>
               </li>
