Feat: Adicionando experiência

--- a/index.html
+++ b/index.html
@@ -259,6 +259,41 @@
       <h1>Experiências <strong>Profissionais</strong></h1>
       <div class="container-experiences">
         <ul>
+               <!-- NUMMUS -->
+          <li>
+            <h4>
+              <a href="https://nummus.com.br" target="_blank"
+                >NUMMUS</a
+              >
+            </h4>
+            <div class="line"></div>
+            <ol>
+              Cargo: Estagiário
+            </ol>
+            <ol>
+              Centro. Criciúma/SC.
+            </ol>
+            <ol>
+              Ano: 2025 - momento.
+            </ol>
+            <ol>
+              Status: Atual
+            </ol>
+            <ol>
+              Projeto(s):
+              <a
+                href="#"
+                class="link-project"
+                target="_blank"
+                >NUMMUS Cashback</a
+              >
+            </ol>
+            <h5>Descrição</h5>
+            <div class="description-experiences">
+              <p>Estágio na área de desenvolvimento Fullstack. <br>Técnologias: Node.js, React, PostgreSQL, GitLab.</p>
+            </div>
+          </li>
+          <!-- TEIA -->
           <li>
             <h4>
               <a href="https://www.teia.tec.br/" target="_blank"
@@ -289,7 +324,7 @@
             </ol>
             <h5>Descrição</h5>
             <div class="description-experiences">
-              <p>Desenvolvimento backend com PHP e MySQL.</p>
+              <p>Projeto freelancer, desenvolvimento backend. <br>Técnologias: PHP e MySQL</p>
             </div>
           </li>
         </ul>
@@ -338,8 +373,8 @@
                 ></a>
               </li>
               <li>
-                <a href="https://www.instagram.com/regis.copedro/" target="_blank"
-                  ><i class="fa-brands fa-instagram"></i
+                <a href="https://wa.link/yltslk" target="_blank"
+                  ><i class="fa-brands fa-whatsapp"></i
                 ></a>
               </li>
             </ul>
